# Maml

./: .gitignore  Interpreter.opam  README.md  dune  dune-project  flake.nix  justfile
examples/: compiler.ape  last.ape  reduce.ape  test.ape
lib/: dune
lib/ast/: ast.ml  dune
lib/builtin/: builtin.ml  builtin.mli  dune
lib/code/: code.ml  code.mli  dune
lib/compiler/: compiler.ml  compiler.mli  dune
lib/environment/: dune  environment.ml  environment.mli
lib/evaluater/: dune  evaluater.ml  evaluater.mli
lib/frame/: dune  frame.ml
lib/lex/: dune  lex.ml
lib/lexer/: dune  lexer.ml
lib/object/: dune  object.ml
lib/parser/: dune  parser.ml
lib/parsing/: dune  parsing.ml
lib/program_stack/: dune  program_stack.ml  program_stack.mli
lib/repl/: dune  repl.ml
lib/symbol_table/: dune  symbol_table.ml
lib/token/: dune  token.ml  token.mli
lib/utils/: dune  utils.ml
lib/vm/: dune  vm.ml  vm.mli
test/: code_test.ml  compiler_test.ml  dune  evaluater_test.ml  lexer_test.ml  object_test.ml  parser_test.ml  program_stack_test.ml  symbol_table_test.ml  token_test.ml  utils_test.ml  vm_test.ml
