(env
(dev
(flags (:standard -w -8-32-37+9 )))) ; Ony keep 9 here
; I want to remove 8 at some point 
;add +A to see all warnings
;; 8 is for this type of pattern matching
;; let Object.Int left, Object.Int right = (left, right) 

; these are what  had suppresed during development

; (flags (:standard -w -66-34-69-37-32-9-8)))) ; Ony keep 9 here
;-warn-error @A)))) ; Ony keep 9 here
